Closed
Bug 292286
Opened 21 years ago
Closed 20 years ago
constant jumps to top of page while page is loading (broken scrolling, anchors)
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: stevee, Assigned: roc)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
371 bytes,
text/html
|
Details | |
|
1.50 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
dbaron
:
approval1.8b2+
|
Details | Diff | Splinter Review |
1. Go to
http://tinderbox.mozilla.org/bonsai/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=1114718940
2. Whilst the page is loading, use the mousewheel to try and scroll down.
3. Notice that the page starts to scroll down, then for some reason jumps back
to the top of the page.
Since viewing the effects of this bug is dependent on having the page load
slowly, it is hard for me to make a local testcase.
There have been a lot of landings that might have caused this. As total stabs in
the dark, bug 282708, bug 290752, bug 290673, bug 240276 or bug 288560.
The problem is also seen on the following sites:
- http://www.shacknews.com/ja.zz?comments=36794
- http://news.google.co.uk/
- http://edition.cnn.com/
Probably related: Go to any of the sites mentioned above, scroll down to the
bottom of the page, then hit CTRL++ to increase font size. Note that focus jumps
to the top of the page again.
| Reporter | ||
Comment 1•21 years ago
|
||
Forgot to mention: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b2)
Gecko/20050428 Firefox/1.0+ (beast build, 16:59 PDT)
| Assignee | ||
Comment 2•21 years ago
|
||
Those URLs load kinda fast for me. But this one loads slow:
http://lxr.mozilla.org/mozilla/source/layout/base/nsCSSFrameConstructor.cpp
But I don't see the bug. Do you see it with that URL?
| Reporter | ||
Comment 3•21 years ago
|
||
Yes I see the jumping to the top of the page whilst scrolling with
http://lxr.mozilla.org/mozilla/source/layout/base/nsCSSFrameConstructor.cpp
| Assignee | ||
Comment 4•21 years ago
|
||
Is it only a problem with the mousewheel? I don't have a mousewheel
| Reporter | ||
Comment 5•21 years ago
|
||
No, it happens with Arrowkey Down, PGDN and by click-and-holding on the Down
icon below the vertical scrollbar too. Also happens irrespective of the Smooth
Scrolling option.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050428
Firefox/1.0+
Confirmed.
I'm almost certain that this one regressed because of bug 240276.
The page is drawn during loading, so I assume everytime it's redrawn the
scrollbar bounces to the top...
Comment 7•21 years ago
|
||
Also affects the End key and find-as-you-type.
Comment 8•21 years ago
|
||
Would like to add it also happens if any sidebar is opened. History, Bookmarks...
Scroll down the page a bit, and open the side-bar...page jumps to top when
closing the sidebar.
Comment 9•21 years ago
|
||
I wonder if this is related to all the bugs where people complain the back
button doesn't take them back to the same place, particularly in ebay.
Comment 10•21 years ago
|
||
(In reply to comment #9)
> I wonder if this is related to all the bugs where people complain the back
> button doesn't take them back to the same place, particularly in ebay.
No, that would be bug 215405 or bug 258133 (which is probably a dupe of the
former). This is a recent regression on the trunk.
Comment 11•21 years ago
|
||
I don't have a mouse wheel. I scroll by dragging the scroll block on the scroll
bar, and I also see this. Every time the lay-out of the page changes, it bounces
back to the top.
Comment 12•21 years ago
|
||
I discovered that ChatZilla's chat window is also affected by this.
Comment 13•21 years ago
|
||
also seen on linux/gtk2
this also seems to break anchor scrolling: it happened to me that mozilla
scrolled to the anchor once, then continued to load the document, jumping to the
top and staying there.
OS: Windows 2000 → All
Comment 14•21 years ago
|
||
This also happens if I append an element to some documents' bodies; for example
with the following |javascript:| URL:
javascript:void(document.body.appendChild(document.createElement('br')));
Comment 15•21 years ago
|
||
I'd like to add that middle-clicking to open a new tab on a page that does this
causes the page to jump back up to the top.
Comment 16•21 years ago
|
||
I also experience this randomly: I scroll down to the bottom of the page, press
Reload and the site goes to top without returning.
Big chance with this page: http://www.nu.nl/
And sometimes I leftclick on a link and the link kind of "jumps" away. I have to
find the link again to click it.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050429
Firefox/1.0+
Comment 17•21 years ago
|
||
This is not Windows specific, it happens on Linux as well
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8b2) Gecko/20050429 Firefox/1.0+
Comment 18•21 years ago
|
||
Similar problems on OS X (since 04/28).
Updated•21 years ago
|
Flags: blocking1.8b2?
Comment 19•21 years ago
|
||
This makes chatzilla nearly unusable with modern, if new text arrives it goes
very often to the top. Good for productivity ;-).
Comment 20•21 years ago
|
||
Something weird:
- open this in a new tab: http://moblog.co.uk/blogs.php?show=2386
- wait for the page to finish loading (optionnal)
- hover hover a thumbnail
--> jump to the top
I can reproduce with Firefox 4/29 and Thunderbird 4/29 (rss)
I might make a testcase but that's confusing because that same page, when saved
locally, shows the bug only if the window is maximized.
Comment 21•21 years ago
|
||
*** Bug 292447 has been marked as a duplicate of this bug. ***
Comment 22•21 years ago
|
||
Comment 23•21 years ago
|
||
In reply to comment #20 and #22: Yes, both go to top. Weird.
Assignee: nobody → roc
Flags: blocking1.8b2? → blocking1.8b2+
Updated•21 years ago
|
Flags: blocking1.8b2+ → blocking1.8b2?
Comment 24•21 years ago
|
||
Why was the block that was confirmed, just reset to nominated?
Comment 25•21 years ago
|
||
Bugzilla doesn't cope with flag collisions. :(
Someone with permission will need to reset it, though, I can't.
Flags: blocking1.8b2? → blocking1.8b2+
Comment 26•21 years ago
|
||
Open the testcase and reduce the window's width until the horizontal scrollbar
appears: no jump for me this time.(In reply to comment #20)
> [...] that's confusing because that same page, when saved
> locally, shows the bug only if the window is maximized.
Okay... Open the testcase and reduce the window's width until the horizontal
scrollbar appears: Shouldn't jump this time.
Comment 27•21 years ago
|
||
In mine, it happens when trying to scroll as well as when trying to middle-click
on a link in order to open it in a tab. The tab loads the link but the page that
I was viewing has jumped to top. After trying to open another one or two links
from the same page into tabs, the problem seems to dissapear.
Comment 28•21 years ago
|
||
In reply to comment #26: the same goes for Reload:
1. Go to http://www.nu.nl/
2. Scroll down and click Reload
3. The page goes to top.
When I resize the page till it has a horizontal scrollbar, it doesn't happen.
Comment 29•21 years ago
|
||
think breakage of the ability to read pages as they load and anchors in pages
not working would count as major.
Severity: normal → major
Summary: Scrolling page whilst still loading results in constant jumps to the top of the page → constant jumps to top of page while page is loading (broken scrolling, anchors)
| Assignee | ||
Comment 30•20 years ago
|
||
daft typo, trivial fix
Attachment #182361 -
Flags: superreview?(dbaron)
Attachment #182361 -
Flags: review?(dbaron)
Attachment #182361 -
Flags: superreview?(dbaron)
Attachment #182361 -
Flags: superreview+
Attachment #182361 -
Flags: review?(dbaron)
Attachment #182361 -
Flags: review+
Attachment #182361 -
Flags: approval1.8b2+
| Assignee | ||
Comment 31•20 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment 32•20 years ago
|
||
*** Bug 292500 has been marked as a duplicate of this bug. ***
*** Bug 292564 has been marked as a duplicate of this bug. ***
Comment 34•20 years ago
|
||
The minor side-effect being it'll jump back to the left of the page when a long
link is clicked. For ex shorten this windows height so you can scroll to the
rigth, and click the link in Description.
| Reporter | ||
Comment 35•20 years ago
|
||
(In reply to comment #34)
> The minor side-effect being it'll jump back to the left of the page when a long
> link is clicked. For ex shorten this windows height so you can scroll to the
> rigth, and click the link in Description.
But is this not how it's always worked? Certainly I can see no difference
between how 20050422 and 20050502 behaves when clicking on a long link with a
horizontal scrollbar.
Comment 36•20 years ago
|
||
*** Bug 293120 has been marked as a duplicate of this bug. ***
Comment 37•20 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050430
From bug https://bugzilla.mozilla.org/show_bug.cgi?id=293120, this still happens.
Comment 38•20 years ago
|
||
(In reply to comment #37)
> Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050430
>
> From bug https://bugzilla.mozilla.org/show_bug.cgi?id=293120, this still happens.
No it doesn't (Gecko/20050506). This was fixed on May 1, and the build you are
using is from April 30. Please upgrade to a newer build.
Comment 39•20 years ago
|
||
D'oh. That's the latest build available. I downloaded it this afternoon.
Comment 40•20 years ago
|
||
Double d'oh. I downloaded
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050507
but I forgot to install it.
This bug is now clean.
You need to log in
before you can comment on or make changes to this bug.
Description
•