Bug 292286. Fix stupid typo so that we don't reset the vertical scrollbar when there is no horizontal scrollbar. r+sr+a=dbaron